[gd_scene load_steps=3 format=3 uid="uid://cgxjpal7fi121"]

[ext_resource type="Script" path="res://scripts/main/main.gd" id="1_x7vb1"]
[ext_resource type="PackedScene" uid="uid://dj12y0pl0bonl" path="res://nodes/ui/userui.tscn" id="2_28w3x"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x7vb1")

[node name="UserUI" parent="." instance=ExtResource("2_28w3x")]
layout_mode = 1

[node name="MenuCont" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 20.0
offset_right = -40.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainCont" type="HBoxContainer" parent="MenuCont"]
layout_mode = 2

[node name="ButtonsVCont" type="VBoxContainer" parent="MenuCont/MainCont"]
layout_mode = 2

[node name="EmptyCCont" type="CenterContainer" parent="MenuCont/MainCont/ButtonsVCont"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonsVCont" type="VBoxContainer" parent="MenuCont/MainCont/ButtonsVCont"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MenuCont/MainCont/ButtonsVCont/ButtonsVCont"]
layout_mode = 2
text = "Start"

[node name="SettingsButton" type="Button" parent="MenuCont/MainCont/ButtonsVCont/ButtonsVCont"]
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="MenuCont/MainCont/ButtonsVCont/ButtonsVCont"]
layout_mode = 2
text = "Exit"

[node name="VBoxContainer" type="VBoxContainer" parent="MenuCont/MainCont"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleVCont" type="VBoxContainer" parent="MenuCont/MainCont/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MenuCont/MainCont/VBoxContainer/TitleVCont"]
layout_mode = 2
text = "New Hope"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EmptyCCont" type="CenterContainer" parent="MenuCont/MainCont/VBoxContainer/TitleVCont"]
layout_mode = 2
size_flags_vertical = 3

[node name="DataHCont" type="HBoxContainer" parent="MenuCont/MainCont/VBoxContainer"]
layout_mode = 2

[node name="EmptySpaceHCont" type="HBoxContainer" parent="MenuCont/MainCont/VBoxContainer/DataHCont"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="VersionHCont" type="HBoxContainer" parent="MenuCont/MainCont/VBoxContainer/DataHCont"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VersionLabel" type="Label" parent="MenuCont/MainCont/VBoxContainer/DataHCont/VersionHCont"]
layout_mode = 2
text = "Alpha 0.0.1"

[node name="ByHCont" type="HBoxContainer" parent="MenuCont/MainCont/VBoxContainer/DataHCont"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="ByTextLabel" type="RichTextLabel" parent="MenuCont/MainCont/VBoxContainer/DataHCont/ByHCont"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[wave amp=15]By Luka & Anderon[/wave]"
scroll_active = false

[connection signal="pressed" from="MenuCont/MainCont/ButtonsVCont/ButtonsVCont/ExitButton" to="." method="_on_exit_button_pressed"]
